# Tethys-Agents-Workshop-TethysSummit-2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  portal_config.yml  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: init.sh  pre-setup.sh  reset.sh  setup.sh
workshop/: 00-overview.md  01-composing-tools.md  02-how-tools-work.md  03-react-agent.md  04-agent.md  05-crew.md  06-discovery-and-runners.md
