[project]
name = "tethys-agents-workshop"
version = "0.1.0"
description = "TethysDash + tethys-agents + geoglows-summit-plugin-example workshop scaffold"
requires-python = ">=3.10,<3.13"

# Base Python deps tethys-platform pulls in (or that the workshop image needs
# on top). Plugin-specific deps (intake, pandas, geoglows, statsmodels, etc.)
# come transitively from geoglows-summit-plugin-example's own pyproject.toml
# when it's installed -e in the Dockerfile.
dependencies = [
    "channels",
    "channels-redis",
    "psycopg2-binary",
    "django>=4.2,<6",
    "uvicorn[standard]",
    "pyyaml",
    "jinja2",
    "django-bootstrap5",
    "django-model-utils",
    "django-guardian",
    "social-auth-app-django<5.5",
    "django-termsandconditions",
    "django-cookie-consent",
    "django-json-widget",
    "djangorestframework-simplejwt",
    "sqlalchemy==1.*",
    "requests>=2.32.4,<3",
    "tornado>=6.5,<7",
    # Upstream packaging bug: geoglows 2.2.0 imports pytz unconditionally in
    # _plots/format_tools.py but does NOT list it in pyproject.toml requires.
    # Importing `geoglows` fails with ModuleNotFoundError until pytz is
    # installed. Declare it here so the workshop's image bakes it in,
    # independent of any future geoglows release that may or may not fix
    # the upstream metadata.
    "pytz",
]
